fixed flicker on bio page

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -422,7 +422,7 @@ html, a {
     margin-right: 15px;
   }
   .bio {
-    float: left;
+    float: right;
     width: 285px;
     h3 {
       margin: 0 auto;
